--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,7 @@
 <resources>
     <string name="app_name">Todo</string>
     <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
-    <string name="title_overview">Overview</string>
     <string name="title_calendar">Calendar</string>
-    <string name="title_add">Add Modules</string>
     <string name="title_viewmods">View Modules</string>
+    <string name="title_addtask">Add Task</string>
 </resources>
