--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="title_calendar">Calendar</string>
     <string name="title_viewmods">View Modules</string>
     <string name="title_addtask">Add Task</string>
+    <string name="label_progress_bar">Weekly Progress</string>
 </resources>
