--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,17 @@
     <string name="title_viewmods">View Modules</string>
     <string name="title_addtask">Add Task</string>
     <string name="label_progress_bar">Weekly Progress</string>
+
+    <!--Add Task form labels-->
+    <string name="task_name_label">Task Name</string>
+    <string name="task_description_label">Task Description</string>
+    <string name="module_label">Select Module</string>
+    <string name="due_date_label">Due Date</string>
+    <string name="select_date_label">Select Date</string>
+    <string name="due_time_label">Due Time</string>
+    <string name="select_time_label">Select Time</string>
+    <string name="importance_label">Importance Level</string>
+    <string name="cue_reminders_label">Cue Reminders</string>
+    <string name="clear_button_label">Clear</string>
+    <string name="add_task_button_label">Add Task</string>
 </resources>
