Import all files for setup page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,16 @@
 <resources>
     <string name="app_name">Todo</string>
+
+    <!-- Bottom Nav -->
     <string name="title_home">Home</string>
     <string name="title_calendar">Calendar</string>
     <string name="title_viewmods">View Modules</string>
     <string name="title_addtask">Add Task</string>
+
+    <!-- Home Fragment -->
     <string name="label_progress_bar">Weekly Progress</string>
+
+    <!-- Add Task Fragment -->
     <string name="task_name_label">Task Name</string>
     <string name="task_description_label">Task Description</string>
     <string name="module_label">Select Module</string>
@@ -16,7 +22,22 @@
     <string name="cue_reminders_label">Cue Reminders</string>
     <string name="clear_button_label">Clear</string>
     <string name="add_task_button_label">Add Task</string>
-    <string name="welcome">Welcome Back,</string>
-    <string name="user">weAreNumberone</string>
+
+    <!-- Splash Screen -->
+    <string name="welcome">Welcome</string>
+    <string name="welcome_back">Welcome Back,</string>
     <string name="quote_of_the_day">Quote Of The Day</string>
+
+    <!-- GetStarted -->
+    <string name="welcome_to">Welcome to</string>
+    <string name="todo">Todo</string>
+    <string name="todo_description">Productivity. Time management. Focus.</string>
+    <string name="get_started">Get Started</string>
+
+    <!-- SetUp -->
+    <string name="back">Back</string>
+    <string name="create_account">Create Account</string>
+    <string name="create_account_description">Enter your name and student ID to create a new account.</string>
+    <string name="name">Name</string>
+    <string name="student_id">Student ID</string>
 </resources>
