Add database read/write functionality to splash screen and one time setup

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,9 +29,12 @@
     <string name="create_account_description">Enter your name and student ID to create a new account.</string>
     <string name="name">Name</string>
     <string name="student_id">Student ID</string>
+    <string name="invalid_name_toast">Invalid name</string>
+    <string name="invalid_id_toast">Invalid student ID</string>
 
     <!-- Splash Screen -->
-    <string name="welcome">Welcome Back,</string>
+    <string name="welcome">Welcome</string>
+    <string name="welcome_back">Welcome Back,</string>
     <string name="user">weAreNumberone</string>
     <string name="quote_of_the_day">Quote Of The Day</string>
 
